summit name update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generative AI Silicon Valley Summit 2023</title>
+  <title>Generative AI Summit Silicon Valley 2023</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
     <nav>
       <!-- Insert navigation bar here -->
     </nav>
-    <h1>Generative AI Silicon Valley Summit 2023</h1>
-    <p>Join us in exploring future possibilities at the Generative AI Silicon Valley Summit 2023. This first large-scale generative AI conference in Silicon Valley will be held on September 23, 2023, at the Mission City Ballroom of the Santa Clara Convention Center. The event is hosted by GPT DAO, a community spontaneously formed by developers, entrepreneurs, and enthusiasts passionate about generative AI.</p>
+    <h1>Generative AI Summit Silicon Valley 2023</h1>
+    <p>Join us in exploring future possibilities at the Generative AI Summit Silicon Valley 2023. This first large-scale generative AI conference in Silicon Valley will be held on September 23, 2023, at the Mission City Ballroom of the Santa Clara Convention Center. The event is hosted by GPT DAO, a community spontaneously formed by developers, entrepreneurs, and enthusiasts passionate about generative AI.</p>
   </header>
   
   <main>
