--- a/summit/index.html
+++ b/summit/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPTDAO</title>
+    <title>GenAI Summit San Francisco 2024</title>
   </head>
   <body>
     <div id="app"></div>
