--- a/summit/index.html
+++ b/summit/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
-    name="viewport"
-    content="width=device-width,initial-scale=1,user-scalable=no"
+      name="viewport"
+      content="width=device-width,initial-scale=1,user-scalable=no"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GenAI Summit San Francisco 2024</title>
+    <meta name="og:site_name" content="GenAI Summit San Francisco 2024">
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="GenAI Summit San Francisco 2024">
+    <meta name="description" content="Co-hosted by Microsoft and GPT DAO. #AIAREALL">
+    <meta property="og:description"
+    content="Co-hosted by Microsoft and GPT DAO. #AIAREALL">
   </head>
   <body>
     <div id="app"></div>
