update youtube k12 video

--- a/summit/index.html
+++ b/summit/index.html
@@ -26,6 +26,7 @@
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="stylesheet" href="node_modules/lite-youtube-embed/src/lite-yt-embed.css" />
     <title>GenAI Summit San Francisco 2024</title>
     <meta name="og:site_name" content="GenAI Summit San Francisco 2024">
     <meta property="og:type" content="article" />
@@ -39,8 +40,9 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQ2GSSH9"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <!-- End Google Tag Manager (noscript) -->
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
   </body>
 </html>
