--- a/summit/index.html
+++ b/summit/index.html
@@ -30,7 +30,10 @@
     <meta name="og:site_name" content="GenAI Summit San Francisco 2024">
     <meta property="og:type" content="article" />
     <meta property="og:title" content="GenAI Summit San Francisco 2024">
+    <!--
     <meta name="description" content="Co-hosted by Microsoft and GPT DAO. #AIAREALL">
+    -->
+    <meta name="description" content="With Microsoft as an anchor sponsor, GPT DAO is hosting this generative AI summer extravaganza, inviting you to dive into the heart of innovation at the GenAI Summit San Francisco 2024, set in the awe-inspiring, historic Palace of Fine Arts from May 29th to May 31st. This summit is not just an event, it’s an extraordinary convergence of the brightest minds in Generative AI, encapsulating the spirit of the future.">
     <meta property="og:description"
     content="Co-hosted by Microsoft and GPT DAO. #AIAREALL">
   </head>
